# goblin-engineer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
.ci/: install.sh  run.sh
doxygen/: doxygen.cfg
example/base/: CMakeLists.txt  main.cpp  test.http
examples/: CMakeLists.txt  examples.md
examples/base/: CMakeLists.txt  main.cpp
examples/base/example 1/: main.cpp
examples/http/: CMakeLists.txt  context.cpp  context.hpp  dto.cpp  dto.hpp  http_connection.cpp  http_connection.hpp  main.cpp  network_service.cpp  network_service.hpp
examples/http_2/: CMakeLists.txt  context.cpp  dto.hpp  http_connection.cpp  http_connection.hpp  main.cpp  network_service.cpp  network_service.hpp  test.http
examples/network/: CMakeLists.txt  main.cpp
header/: goblin-engineer.hpp
header/goblin-engineer/: abstract_manager_service.hpp  abstract_service.hpp  context.hpp  core.hpp  data_provider.hpp  dynamic.hpp  dynamic_environment.hpp  forward.hpp  http.hpp  log.hpp  network.hpp  root_manager.hpp
header/goblin-engineer/components/: http.hpp  network.hpp  root_manager.hpp
header/goblin-engineer/components/http/: CMakeLists.txt  network.hpp
header/goblin-engineer/components/http/detail/: network.hpp
header/goblin-engineer/components/http/dispatcher/: http_dispatcher.cpp  http_dispatcher.hpp  router.hpp
header/goblin-engineer/components/http/dispather/: http_dispather.cpp  http_dispather.hpp  router.hpp
header/goblin-engineer/components/http/http_server/: forward.hpp  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  multiplexer.hpp  server.cpp  server.hpp  websocket_session.cpp  websocket_session.hpp
header/goblin-engineer/components/http/router/: forward.hpp  http_dispather.hpp  router.hpp  service_router.cpp
header/goblin-engineer/core/: abstract_manager_service.hpp  abstract_service.hpp  forward.hpp
header/goblin-engineer/detail/: dynamic.hpp
header/goblin-engineer/http/: forward.hpp  http_dispatcher.cpp  http_dispatcher.hpp  network.hpp  router.hpp
header/goblin-engineer/http/detail/: network.hpp
header/goblin-engineer/http/dispatcher/: http_dispatcher.cpp  http_dispatcher.hpp  router.hpp
source/: abstract_manager_service.cpp  abstract_service.cpp  dynamic.cpp  dynamic_environment.cpp  log.cpp  network.cpp  root_manager.cpp
tests/router/: main.cpp
